--- a/src/Pages/UI/Curveslideshow.css
+++ b/src/Pages/UI/Curveslideshow.css
@@ -4,7 +4,7 @@
   align-items: center;
   overflow: hidden;
   padding: 0 30px;
-  width: 1348px; /* Adjust to fit 5 cards */
+  width: 1348px; /* Adjust to fit 5 crousel-card-3Ds */
   margin: 50px auto;
   perspective: 1000px;
 }
@@ -23,7 +23,7 @@
   display: none;
 }
 
-.card {
+.crousel-card-3D {
   width: 250px;
   height: 400px;
   border-radius: 14px;
@@ -36,7 +36,7 @@
   transform: rotateY(0deg);
 }
 
-.card img {
+.crousel-card-3D img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -54,16 +54,16 @@
 }
 
 /* Curved effect for visible sides */
-.card.first {
+.crousel-card-3D.first {
   transform: perspective(600px) rotateY(20deg);
 }
-.card.first2 {
+.crousel-card-3D.first2 {
   transform: perspective(600px) rotateY(15deg);
 }
-.card.last2 {
+.crousel-card-3D.last2 {
   transform: perspective(600px) rotateY(-15deg);
 }
-.card.last {
+.crousel-card-3D.last {
   transform: perspective(600px) rotateY(-20deg);
 }
 
