--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -336,3 +336,28 @@ body {
     text-decoration: underline;
   }
   
+/* Responsive Adjustments */
+/* @media (max-width: 1024px) {
+  .nav-links {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .nav-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+ .nav-links {
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+  }
+  .mega-dropdown-menu {
+    position: static;
+    transform: none;
+    opacity: 1;
+    visibility: visible;
+    flex-wrap: wrap;
+  }
+} */
