--- a/src/MobileVersion/Components/Navbar/MobileNavbar.css
+++ b/src/MobileVersion/Components/Navbar/MobileNavbar.css
@@ -1,10 +1,14 @@
+body{
+  margin : 0;
+  padding: 0;
+}
 .mobile-container {
   font-family: Arial, sans-serif;
   background: #fff;
   color: #222;
   width: 100%;
-  max-width: 480px;
-  margin: 0 auto;
+  max-width: 100%;
+  /* margin: 0 auto; */
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
 }
 
@@ -12,7 +16,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* padding: 10px 12px; */
+  padding: 10px 12px;
+  /* margin-right: 0; */
   background-color:#00BFFF;
   color: white;
   /* border: 2px solid#00BFFF; */
