--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,8 +1,7 @@
 /* Navbar Styles */
-body {
+/* body {
   padding-top: 110px;
-   /* Adjust based on navbar heights */
-}
+} */
 .logo-img{
   width: auto;
   height: 34px;
@@ -11,6 +10,7 @@ body {
 }
   /* Navbar Container */
   .nav-container {
+    /* padding-top: 110px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -30,6 +30,7 @@ body {
   position: fixed;
   top: 60px; /* Adjust based on subnavbar height */
   left: 0;
+  /* bottom: 0; */
   /* margin-bottom: 10px; */
   /* bottom: 10px; */
   z-index: 999; /* Keep it below subnavbar */
