--- a/src/MobileVersion/Pages/Mobile_TravelCarousel.css
+++ b/src/MobileVersion/Pages/Mobile_TravelCarousel.css
@@ -18,8 +18,7 @@
 }
 
 /* Each card */
-.trip-card {
-  
+.mobile-trip-card {  
   flex: 0 0 80%; 
   margin-left: 5px;
   /* Show most of one card on mobile */
@@ -31,20 +30,20 @@
 }
 
 /* Image section */
-.trip-image-wrapper {
+.mobile-trip-image-wrapper {
   position: relative;
   width: 100%;
   height: 100%; /* Adjusted to fit taller card */
   overflow: hidden;
 }
 
-.trip-image {
+.mobile-trip-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.vignette-overlay {
+.mobile-vignette-overlay {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -54,23 +53,23 @@
 }
 
 /* Text details */
-.trip-details {
+.mobile-trip-details {
   padding: 10px;
 }
 
-.trip-details h3 {
+.mobile-trip-details h3 {
   font-size: 16px;
   margin-bottom: 5px;
 }
 
-.trip-def {
+.mobile-trip-def {
   display: flex;
   justify-content: space-between;
   font-size: 12px;
   margin-top: 5px;
 }
 
-.price {
+.mobile-price {
   display: flex;
   align-items: center;
   gap: 5px;
