--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -23,16 +23,12 @@
 .navbar {
   display: flex;
   justify-content: space-around;
-  /* background-color:#21759b; */
   background-color:#00BFFF;
   padding: 10px 10px;
   width: 100%;
   position: fixed;
   top: 60px; /* Adjust based on subnavbar height */
   left: 0;
-  /* bottom: 0; */
-  /* margin-bottom: 10px; */
-  /* bottom: 10px; */
   z-index: 999; /* Keep it below subnavbar */
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
@@ -338,27 +334,39 @@
   }
   
 /* Responsive Adjustments */
-/* @media (max-width: 1024px) {
-  .nav-links {
-    gap: 20px;
-  }
-}
+@media screen and (max-width :768px) {
+   
+ .navbar{
+  width: 100%;
+  overflow: scroll;
 
-@media (max-width: 768px) {
-  .nav-container {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+  
+ } 
  .nav-links {
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
+     display: flex;
+    gap: 15px;
+    /* overflow-x: auto;       scroll horizontally */
+    white-space: nowrap;    /* keep items in one line */
+    -webkit-overflow-scrolling: touch; /* smooth scroll on mobile */
   }
-  .mega-dropdown-menu {
-    position: static;
-    transform: none;
-    opacity: 1;
-    visibility: visible;
-    flex-wrap: wrap;
+  .nav-links::-webkit-scrollbar {
+    display: none;
   }
-} */
+ .nav-container{
+  max-width: 600px;
+  margin-left: 5%;
+  display: flex;
+  gap:1px;
+ }
+ .dropdown-link{
+  width: 150px; 
+  /* This width is removing next line */
+}
+.mega-dropdown-menu{
+  z-index: 9999;
+}
+.logo-img{
+  /* height: 54px; */
+  margin-top: 1%;
+}
+}
