--- a/src/Components/NavbarDropdown.css
+++ b/src/Components/NavbarDropdown.css
@@ -2,12 +2,6 @@
   position: relative;
 }
 
-/* .dropdown-link {
-  padding: 10px 20px;
-  cursor: pointer;
-  font-weight: bold;
-} */
-
 .dropdown-menu {
  display: none; 
   position: absolute;
@@ -61,8 +55,10 @@
   background-color: #00BFFF;
   color: white;
   /* background-color: teal; */
-  
-    
+}
+.domestic-dropdown-arrow{
+  margin-top: 10%;
+  margin-left: 5%;
 }
 
 .state-name a {
