--- a/src/MobileVersion/Pages/Mobile_TravelCarousel.css
+++ b/src/MobileVersion/Pages/Mobile_TravelCarousel.css
@@ -3,7 +3,6 @@
 /* @media (max-width: 500px) { */
 /* Horizontal scroll container */
 .travel-carousel-scroll {
-
   display: flex;
   gap: 12px;
   overflow-x: auto;
@@ -14,20 +13,22 @@
 }
 
 .travel-carousel-scroll::-webkit-scrollbar {
-  display: none; /* hide scrollbar on mobile */
+  display: none; 
+  /* hide scrollbar on mobile */
 }
 
 /* Each card */
 .mobile-trip-card {  
   flex: 0 0 80%; 
   margin-left: 5px;
+  height: 500px;
   /* Show most of one card on mobile */
   background: white;
   border-radius: 10px;
   overflow: hidden;
   scroll-snap-align: start;
   box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-}
+} 
 
 /* Image section */
 .mobile-trip-image-wrapper {
@@ -38,9 +39,10 @@
 }
 
 .mobile-trip-image {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .mobile-vignette-overlay {
@@ -50,26 +52,62 @@
   width: 100%;
   height: 35%;
   background: linear-gradient(to top, rgba(0,0,0,0.6), transparent);
+  pointer-events: none; /* allow clicks to pass through */
+  z-index: 1; /* lower than details */
 }
+
+.mobile-trip-details {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background: linear-gradient(to top, black, transparent);
+  color: white;
+  padding: 10px 15px;
+  box-sizing: border-box;
+}
+
 
 /* Text details */
-.mobile-trip-details {
-  padding: 10px;
-}
 
 .mobile-trip-details h3 {
-  font-size: 16px;
-  margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 10px;
+  color: #fff;
 }
 
 .mobile-trip-def {
   display: flex;
   justify-content: space-between;
-  font-size: 12px;
-  margin-top: 5px;
+  padding: 0 8px;
+  margin-bottom: 8px;
+}
+.mobile-trip-item {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 14px;
+  color: white;
+}
+.trip-item-location {
+  margin-right: 10px;
 }
 
-.mobile-price {
+.custom-div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* padding: 2px 10px; */
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 12px;
+  padding-right: 6px;
+  margin-top: 8px;
+}
+.price {
   display: flex;
   align-items: center;
   gap: 5px;
@@ -86,10 +124,22 @@
   color: red;
 }
 
-.custom-div {
+.custom-head {
   display: flex;
-  justify-content: space-between;
-  margin-top: 8px;
+  align-items: center;
+  gap: 6px;
+  border-radius: 30px;
+  /* padding: 4px 12px; */
+  /* color: skyblue; */
+  color: white;
+  font-size: 14px;
 }
+
+.custom {
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 0;
+}
+
 
 /* } */
