--- a/src/Pages/Ladakh/Itenaries/components/InfoCard.css
+++ b/src/Pages/Ladakh/Itenaries/components/InfoCard.css
@@ -32,3 +32,18 @@
     font-weight: bold;
     margin: 2px 0 0;
 }
+@media screen and (max-width : 768px) {
+    .info-container{
+        display: flex;
+    /* display: grid;
+    grid-template-columns: repeat(2,150px);
+    gap: 50px; */
+    margin-left: 10%;
+    }
+    .info-card{
+        min-width: 150px;
+    }
+    .para-incl{
+        width: 500px;
+    }
+}
