--- a/src/Pages/Ladakh/Itenaries/components/TabNavigation.css
+++ b/src/Pages/Ladakh/Itenaries/components/TabNavigation.css
@@ -1,45 +1,48 @@
 .tab-container {
-    position: sticky;
-    top: 117.5px; /* Adjust this value to match your main navigation height */
-    z-index: 1000;
-    background-color: white;
-    padding: 10px 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    border-bottom: 1px solid #e0e0e0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  position: sticky;
+  top: 135px;
+  /* Adjust this value to match your main navigation height */
+  z-index: 1000;
+  background-color: white;
+  padding: 10px 0;
+  width: 100%;
+  /* width: 180px; */
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px solid #e0e0e0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .section {
-    scroll-margin-top: 160px; /* navHeight + tabHeight */
-    padding: 20px;
+  scroll-margin-top: 160px;
+  /* navHeight + tabHeight */
+  padding: 20px;
 }
 
-  .tab {
-    flex: 1;
-    text-align: center;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    color: #333;
-    padding: 10px 0;
-  }
-  
-  .tab.active {
-    color: #00a9ce;
-    position: relative;
-  }
-  
-  .underline {
-    position: absolute;
-    bottom: 0;
-    height: 3px;
-    background-color: #00a9ce;
-    width: 80px;
-    margin-left: 0;
-    transition: left 0.3s ease-in-out;
-  }
+.tab {
+  flex: 1;
+  text-align: center;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  padding: 10px 0;
+}
+
+.tab.active {
+  color: #00a9ce;
+  position: relative;
+}
+
+.underline {
+  position: absolute;
+  bottom: 0;
+  height: 3px;
+  background-color: #00a9ce;
+  width: 80px;
+  margin-left: 0;
+  transition: left 0.3s ease-in-out;
+}
 
 .info-card-container {
   position: relative;
@@ -50,7 +53,37 @@
 
 .info-card-container.fixed {
   position: sticky;
-  top: 175px; /* Adjust based on your navbar + tab heights */
+  top: 195px;
+  /* Adjust based on your navbar + tab heights */
 }
-  
- 
+
+@media screen and (max-width : 768px) {
+  .tab-container {
+   position: sticky;
+    top: 140px;
+    z-index: 1000;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    /* padding: 0px 12px; */
+   gap: 24px;
+   width: 100%;
+    /* -webkit-box-pack: justify; */
+    justify-content: space-between;
+    overflow: scroll;
+    margin-right: 5%;
+  }
+
+  .info-card-container.fixed {
+    position: sticky;
+    top: 192px;
+    /* Adjust based on your navbar + tab heights */
+  }
+
+}
+@media screen and (max-width :500px) {
+  .tab-container{
+    /* width: 250px; */
+    top: 0;
+    overflow: scroll;
+  }
+}
