--- a/src/MobileVersion/Components/SlideShow/Destination-SlideShow/DestinationSlideshow.css
+++ b/src/MobileVersion/Components/SlideShow/Destination-SlideShow/DestinationSlideshow.css
@@ -14,7 +14,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  border-radius: 10px !important; /* Remove curve */
+  border-radius: 50px !important; /* Remove curve */
   /* overflow: hidden; */
   position: relative;
   text-decoration: none;
@@ -23,6 +23,7 @@
 }
 
 .card-slide img {
+  border-radius: 5%;
   display: block;
   width: 100%;
   height: 100%;
