--- a/src/Components/Dashboard-components/LadhakTripBanner.css
+++ b/src/Components/Dashboard-components/LadhakTripBanner.css
@@ -66,6 +66,7 @@
   overflow: hidden;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   text-decoration: none;
+  border: 2px solid white;
   /* overflow: scroll; */
 }
 
