--- a/src/MobileVersion/Components/Navbar/MobileNavbar.css
+++ b/src/MobileVersion/Components/Navbar/MobileNavbar.css
@@ -10,6 +10,7 @@ body{
   max-width: 100%;
   /* margin: 0 auto; */
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+ 
 }
 
 .top-header {
@@ -20,7 +21,10 @@ body{
   /* margin-right: 0; */
   background-color:#00BFFF;
   color: white;
-  /* border: 2px solid#00BFFF; */
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  width: 100%;
 }
 .mobile-log-img{
   width: 75px;
