--- a/src/MobileVersion/Components/SlideShow/Destination-SlideShow/DestinationSlideshow.css
+++ b/src/MobileVersion/Components/SlideShow/Destination-SlideShow/DestinationSlideshow.css
@@ -14,8 +14,8 @@
   display: block;
   width: 100%;
   height: 100%;
-  border-radius: 50px !important; /* Remove curve */
-  /* overflow: hidden; */
+  border-radius: 20px;   /* match your curve */
+  overflow: hidden;      /* 👈 hides unwanted edges */
   position: relative;
   text-decoration: none;
   color: inherit;
@@ -23,7 +23,7 @@
 }
 
 .card-slide img {
-  border-radius: 5%;
+  border-radius: 20px;
   display: block;
   width: 100%;
   height: 100%;
@@ -50,4 +50,9 @@
   margin: 4px 0 0;
   font-size: 14px;
   color: #ffc107;
+}
+.swiper-slide-shadow,
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none !important;
 }
