--- a/src/MobileVersion/Pages/Ladakh_Mobile.css
+++ b/src/MobileVersion/Pages/Ladakh_Mobile.css
@@ -1,54 +1,53 @@
-body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
+
+
+.mobile-carousel-container {
+  width: 95%;
+  /* max-width: 390px; */
+  /* min-width: 100px; */
+  margin-left: 2%;
+  /* height: 150px; */
+   position: relative;
+  margin-top: 13%;
 }
 
-.carousel-container {
-  width: 100%;
-  /* max-width: 1520px; */
-   /* position: relative; */
-  margin-top: 8%;
-}
-
-.carousel-slide {
+.mobile-carousel-slide {
   position: relative;
   height: 500px;
 }
 
-.carousel-image {
+.mobile-carousel-image {
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-position: center;
+  /* background-position: center; */
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.carousel-content {
+.mobile-carousel-content {
   position: absolute;
-  left: 50px;
+  left: 10px;
   bottom: 50px;
   color: white;
-  max-width: 500px;
+  /* max-width: 50px; */
 }
 
-.carousel-content h2 {
-  font-size: 36px;
+.mobile-carousel-content h2 {
+  font-size: 35px;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
-.carousel-content p {
+.mobile-carousel-content p {
   font-size: 18px;
   margin-bottom: 10px;
   color: rgb(12, 87, 4);
   font-weight: bold;
 }
 
-.carousel-content .Price {
+.mobile-carousel-content .Price {
   color: #FFD700 !important;
   font-weight: bold;
   font-size: 28px;
@@ -57,20 +56,13 @@ body {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
-.callback-btn {
+.callbackk-btn {
   background-color: yellow;
   color: black;
-  padding: 10px 20px;
+  padding: 10px 10px;
   border: none;
   cursor: pointer;
   font-weight: bold;
   margin-top: 10px;
   border-radius: 5px;
-}
-@media (max-width : 768px) {
-  .carousel-container{
-    width: 100%;
-    /* height: 200px; */
-    /* max-width: 500px; */
-     }
 }
