--- a/src/Pages/UI/ItneariesSlideshow.css
+++ b/src/Pages/UI/ItneariesSlideshow.css
@@ -115,10 +115,10 @@
 @media (max-width: 768px) {
     
     .slideshow-container {
-        height: 500px;
+        height: 50px;
         width: 100%;
         border: 2px solid;
-        margin-left: 3%;
+        /* margin-left: 3%; */
         /* margin-top: 5%; */
     }
 
@@ -133,13 +133,13 @@
         padding: 6px 12px;
         font-size: 13px;
         gap: 5px; */
-        left: 30%;
+        left: 50%;
         width: auto;
     }
     .whatsapp-btn{
         left: 75%;
         width: auto;
-       /* display: none; */
+       display: none;
     }
     .requestcallback-btn{
         display: none;
