--- a/src/Components/Dashboard-components/LadhakTripBanner.css
+++ b/src/Components/Dashboard-components/LadhakTripBanner.css
@@ -46,8 +46,6 @@
 
 .trip-swiper {
   margin-top: -40px; 
-  
-  
 }
 
 
@@ -60,8 +58,9 @@
 .ladakh-trip-card {
   position: relative;
   display: block;
-  width: 350px;
-  height: 200px; /* fixed height */
+  /* width: 350px; */
+  /* height: 200px; */
+   /* fixed height */
   border-radius: 15px;
   overflow: hidden;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
