--- a/src/Components/Dashboard-components/UpcomingTrips.css
+++ b/src/Components/Dashboard-components/UpcomingTrips.css
@@ -1,15 +1,19 @@
 .upcoming-trips-banner {
     position: relative;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1350px;
     margin: auto;
     overflow: hidden;
+    margin-top: 15%;
     border-radius: 10px;
-    /* height: 220px; */
+        /* height: 450px; */
+    /* height: 400px; */
   }
   
   .banner-image {
+    margin-top: 5%;
     width: 100%;
+    height: 20px;
     height: auto;
     display: block;
   }
