--- a/src/Pages/LadakhTrips/LadakhTrips.css
+++ b/src/Pages/LadakhTrips/LadakhTrips.css
@@ -3,12 +3,22 @@
 }
 
 /* set this once (adjust value to your header height) */
-:root { --header-h: 150px; }
+:root 
+{ 
+    --header-h: 150px;
+    --customize-h : 1px;
+    --luxurious-h :0px;
+}
 
 /* apply to your anchor sections */
 .anchor-section {
   scroll-margin-top: var(--header-h);
 }
-
+.anchor-section-customize{
+     scroll-margin-top: var(--customize-h);
+}
+.anchor-section-luxurious{
+    scroll-margin-top: var(--luxurious-h);
+}
 /* optional: smooth behavior for hash links */
 html { scroll-behavior: smooth; }
