--- a/src/Pages/UI/Crousel.css
+++ b/src/Pages/UI/Crousel.css
@@ -13,11 +13,13 @@ body {
 
 .carousel-slide {
   position: relative;
+  /* height: 100%; */
   height: 500px;
 }
 
 .carousel-image {
-  width: 100%;
+  width: 1520px;
+  /* width: 100%; */
   height: 100%;
   background-size: cover;
   background-position: center;
