--- a/src/Pages/UI/swipper.css
+++ b/src/Pages/UI/swipper.css
@@ -2,17 +2,18 @@
   position: relative;
   width: 100%;
   max-width: 1380px;
+  /* border: 2px solid; */
   /* margin: 5px 70px; */
   padding: 0 20px;
   perspective: 1000px;
   margin-left: 55px;
   /* height: fit-content; */
-  
+  /* overflow: scroll; */
 }
 /* ✅ Modified width & height here */
 .trip-card {
-  /* width: 30px; */
-  height: 480px;
+  width: 30px;
+  height: 450px;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
@@ -25,7 +26,8 @@
 .trip-image-wrapper {
   position: relative;
   width: 100%;
-  height: 60%; /* Adjusted to fit taller card */
+  /* width: 250px; */
+  height: 30%; /* Adjusted to fit taller card */
   overflow: hidden;
 }
 
