--- a/src/Pages/Booking/Customize_Form/QueryForm.css
+++ b/src/Pages/Booking/Customize_Form/QueryForm.css
@@ -1,12 +1,24 @@
 .query-form-container {
-    max-width: 500px;
-    margin: 40px auto;
+    /* margin: 40px auto;
     background: #fff;
     padding: 25px 30px;
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
   }
-  
+  .costing-form-container{
+  width: 450px;
+  margin-left: 85px;
+  padding: 30px;
+  background-color: #ffffff;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+  font-family: 'Segoe UI', sans-serif;
+  }
+
+ .parent-booking-div{
+  display: flex;
+  justify-content: space-around;
+ }
   h2 {
     text-align: center;
     margin-bottom: 20px;
@@ -41,7 +53,6 @@
  .query-btn:hover {
     background-color: #45a049;
   }
-  
   .success-message {
     background-color: #4CAF50;
     color: white;
@@ -51,6 +62,78 @@
     text-align: center;
     animation: fadeIn 0.5s ease-in;
   }
+  .summary-section {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-right: 150px;
+}
+.tour-card img{
+  width: 250px;
+  margin-right: 200px;
+}
+.tour-card {
+  background-color: #fff;
+  padding: 20px;
+  border-left: 6px solid #00bcd4;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #ddd;
+  position: relative;
+  margin-top: 30px;
+  width : '150px';
+  
+}
+.customize-submission {
+  background-color: #fff;
+  padding: 20px;
+  border-left: 6px solid #00bcd4;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #ddd;
+  position: relative;
+  margin-top: 30px;
+  width : '150px';
+}
+
+.tour-card h3 {
+  margin-bottom: 8px;
+  font-size: 18px;
+  /* margin-top: 15px; */
+}
+
+.tour-card p {
+  margin: 0;
+  color: #333;
+}
+.duration-box {
+  position: absolute;
+  top: 2px;
+  right: 20px;
+  background-color: #00bcd4;
+  color: white;
+  padding: 6px 12px;
+  border-radius: 8px;
+  font-weight: bold;
+}
+
+.price-box {
+  background: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #ddd;
+}
+
+.price-box h2 {
+  margin: 0;
+  font-size: 24px;
+  color: #00bcd4;
+}
+
+.price-box span {
+  font-size: 14px;
+  color: #666;
+}
+
   
   @keyframes fadeIn {
     from {
