--- a/src/Pages/Booking/Customize_Form/QueryForm.css
+++ b/src/Pages/Booking/Customize_Form/QueryForm.css
@@ -24,13 +24,13 @@
     margin-bottom: 20px;
   }
   
-  form label {
+  .query-form-label {
     display: block;
     margin-bottom: 15px;
     text-align: left;
   }
   
-  form input {
+  .query-form-input {
     width: 100%;
     padding: 10px;
     margin-top: 5px;
