--- a/src/Components/Dashboard-components/LadhakTripBanner.css
+++ b/src/Components/Dashboard-components/LadhakTripBanner.css
@@ -58,8 +58,8 @@
 .ladakh-trip-card {
   position: relative;
   display: block;
-  /* width: 350px; */
-  /* height: 200px; */
+  width: 350px;
+  height: 200px;
    /* fixed height */
   border-radius: 15px;
   overflow: hidden;
