--- a/src/Pages/DomesticTrips/DomesticTrips.css
+++ b/src/Pages/DomesticTrips/DomesticTrips.css
@@ -2,6 +2,8 @@
     /* style={{display : 'flex', gap:'25px'}} */
     display: flex;
     gap : 25px;
-    border: 1ps teal;
     overflow: scroll;
+}
+.weekend-container >h4{
+    border: 2px solid teal;
 }
