--- a/src/Pages/UI/swipper.css
+++ b/src/Pages/UI/swipper.css
@@ -25,6 +25,7 @@
 
 .trip-image-wrapper {
   position: relative;
+  /* border: 5px solid red; */
   width: 100%;
   /* width: 250px; */
   height: 30%; /* Adjusted to fit taller card */
